--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="icon" href="image/icon.png">
     <title>Bootstrap profile 作業</title>
-    <link rel="stylesheet" href="stylesheet/all.css">
-<style>
-  
-</style> <!--https://unsplash.com/@ullashinami-->
+    <link rel="stylesheet" href="stylesheet/css/all.css">
+
 </head>
 <body> <!--#fc9400 primary橘色--> <!--#036a61 info綠色-->
 
@@ -66,7 +64,7 @@
 
                 <div class="col">
                     <div class="card text-white border-5 rounded-4 overflow-hidden h-100">
-                        <img src="https://images.unsplash.com/photo-1567225557594-88d73e55f2cb?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img h-100 object-fit-cover" alt="卡片01">
+                        <img src="image/card01.jpeg" class="card-img h-100 object-fit-cover" alt="卡片01">
                         <div class="card-img-overlay top-auto bg-dark-gradient">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -77,7 +75,7 @@
 
                 <div class="col">
                     <div class="card text-white border-5 rounded-4 overflow-hidden h-100">
-                        <img src="https://images.unsplash.com/photo-1556020685-ae41abfc9365?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img h-100 object-fit-cover" alt="卡片02">
+                        <img src="image/card02.jpeg" class="card-img h-100 object-fit-cover" alt="卡片02">
                         <div class="card-img-overlay top-auto bg-dark-gradient">
                           <h5 class="card-title text-white">Card title</h5>
                           <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -88,7 +86,7 @@
 
                 <div class="col">
                     <div class="card text-white border-5 rounded-4 overflow-hidden h-100">
-                        <img src="https://images.unsplash.com/photo-1562663474-6cbb3eaa4d14?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img h-100 object-fit-cover" width="300" alt="卡片03">
+                        <img src="image/card03.jpeg" class="card-img h-100 object-fit-cover" width="300" alt="卡片03">
                         <div class="card-img-overlay top-auto bg-dark-gradient">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -146,7 +144,7 @@
                                 此欄必填
                             </div>
                         </div>
-                        <div class="col-12">
+                        <div class="mb-3">
                           <label for="inputEmail" class="form-label">Email *</label>
                           <input type="mail" class="form-control" id="inputEmail" placeholder="sample@mail.com" required>
                           <div class="valid-feedback">
@@ -156,7 +154,7 @@
                             此欄必填
                           </div>
                         </div>
-                        <div class="col-12 mb-3">
+                        <div class="mb-3">
                           <label for="validationCustom03" class="form-label">留些訊息給我吧 *</label>
                           <textarea class="form-control" id="validationCustom03" rows="3" required></textarea>
                           <div class="valid-feedback">
@@ -166,7 +164,7 @@
                             請留訊息給我QQ
                           </div>
                         </div>
-                        <div class="col-12 text-end">
+                        <div class="text-end">
                           <button type="submit" class="btn btn-outline-light">送出表單</button>
                         </div>
                       </form>
